== 1.0.9 ==
- Fixed an issue where the login services changed the response contenttype. The check for text/plain is now more relaxed.

== 1.0.8 == 
- Fixed issue 13 from the public issue list. If a content element contained xhtml, and not just text, 
  the content was not read correctly. 
- Fixed issue 17 from the public issue list. XHTML content was not persisted correctly.
- Added support for hosted domain feeds. This is done automatically, no codechanges needed for the application developer.
  The authentication code was changed to ask for Hosted domains first, then google accounts. 
- Added support for the app:control/app:draft element, but only in the way to expose a boolean on the AtomEntry. 
  The new member on AtomEntry is called IsDraft.
- Changed the way atom:content is parsed. Text & HTML types use xmlreader.ReadString() to get the inner content. XHTML and
  all other types use readInnerXml() to get the content.
- changed Exception handling. The code now throws more detailed exceptions based on what was happening:
  -> GDataRequestException: generic exception 
  -> GDataForbiddenException: exception thrown when the server return a Forbidden on authentication
  -> GDataRedirectException: exception thrown when the server returned a redirect
- changed redirect handling on Post. The library will follow redirects on Post automatically by default, to accomodate Blogger (which
  currently may return 302s on posts). This can be turned off by setting the .StrictRedirect property to true on the 
  GDataAuthRequestFactory. If it is turned off, the code will throw if a redirect is happening on an HTTP verb other than GET.
- changed redirect handling for DELETE/PUT the same as for POST
- removed cookie handling. The code will handle cookies now without using the CookieContainer (one hurdle on the way to the CompactFramework Port).
- Fixed persistence of "initialized" date values for udpated/published on the atom.entry. This resolves an issue with the Blogger. 