@@ -27,7 +27,7 @@ using System.Diagnostics;
 //////////////////////////////////////////////////////////////////////
 namespace Google.GData.Client
 {
-#if WindowsCE
+#if WindowsCE || PocketPC
     //////////////////////////////////////////////////////////////////////
     /// <summary>Tracing helper class. Does nothing under WindowsCE
     ///  </summary> 
