@@ -55,7 +55,7 @@ using System.Runtime.CompilerServices;
 //
 [assembly: AssemblyDelaySign(false)]
 
-#if WindowsCE
+#if WindowsCE || PocketPC
 #else
 [assembly: AssemblyKeyFile("gbase.sn")]
 #endif
