@@ -28,7 +28,7 @@ using System.Runtime.CompilerServices;
 
 
 [assembly: AssemblyDelaySign(false)]
-#if WindowsCE
+#if WindowsCE || PocketPC
 #else
 [assembly: AssemblyKeyFile("calendarkey.sn")]
 #endif
