@@ -1,5 +1,8 @@
 == 1.0.9 ==
 - Fixed an issue where the login services changed the response contenttype. The check for text/plain is now more relaxed.
+- Added the missing location calls for Geolocation for GoogleBase
+- Fixed a build issue for Windows Mobile in release. The code now compiles for PocketPC and WindowsMobile symbols defined.
+
 
 == 1.0.8 == 
 - Fixed issue 13 from the public issue list. If a content element contained xhtml, and not just text, 
